# mkdocs-plugin

./: pyproject.toml
mkdocs_entangled/: on_page_content.py  on_page_markdown.py  plugin.py
mkdocs_entangled/css/: entangled.css
mkdocs_entangled/js/: entangled.js
